--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_details.html
@@ -115,7 +115,7 @@
                             {% endfor %}
                             <div class="col-md-2">
 
-                             <h3 >تولید + سرعت</h3>
+                             <h3 >تولید 100</h3>
 
                               <div class="table-responsive">
                                 <table class="table table-bordered table-striped company-table" >
