--- a/tiny_mrp/mrp/templates/mrp/tolid/details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details.html
@@ -146,7 +146,7 @@
                             {% endfor %}
                             <div class="col-md-2">
 
-                             <h3 >تولید + سرعت</h3>
+                             <h3 >تولید 100</h3>
 
                               <div class="table-responsive">
                                 <table class="table table-bordered table-striped company-table" >
@@ -154,7 +154,7 @@
                                     <tr>
 
                                       <th>سرعت</th>
-                                      <th>تولید 100%</th>
+                                      <th>100%</th>
 
 
                                     </tr>
