--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -105,6 +105,8 @@
       <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه<span class="badge badge-danger">2</span></a></li>
       <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید</a></li>
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
+      <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
+
 
 
 
