--- a/tiny_mrp/mrp/templates/mrp/tolid/details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details.html
@@ -17,14 +17,11 @@
                               </li>
                                 <li class="list-inline-item mb-0">
                                     <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
-                                        انتخاب بر اساس
+                                      عملیات
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">خوانده شده</a>
-                                        <a class="dropdown-item" href="#">خوانده نشده</a>
-                                        <a class="dropdown-item" href="#">اسپم</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item text-danger" href="#">حذف</a>
+                                        <a class="dropdown-item add-zayeat" href="#" data-url="{%url 'zayeatVazn_create' %}">ورود ضایعات</a>
+
                                     </div>
                                 </li>
 
@@ -178,6 +175,13 @@
 
                           </div>
 
+                        </div>
+                        <div class="modal fade" id="modal-company">
+                         <div class="modal-dialog  modal-lg ">
+
+                           <div class="modal-content ">
+                           </div>
+                         </div>
                         </div>
                       </div>
                         <!-- end::app-lists -->
