--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznForm.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznForm.html
@@ -1,10 +1,11 @@
 {% load widget_tweaks %}
 <div class="row">
 <div class="col-sm-12 b-r">
-
-
-<div class="table-responsive"> <!-- Required for Responsive -->
-  <table class="table table-striped table-bordered">
+  <input type="hidden" id="js_data"/>
+{% for c in shifts %}
+<h3>{{c.name}}</h3>
+<div class=""> <!-- Required for Responsive -->
+  <table class="table table-striped table-bordered tbl-zayeat-vazn">
     <thead>
       <tr>
         {% for i in zayeat %}
@@ -14,13 +15,15 @@
     </thead>
     <tbody>
       {% for i in zayeat %}
-      <td contenteditable="true" class="editable-cell" data-date={{date}} style="  width: 100px; /* Set the width of the editable cell */   min-width: 100px; /* Ensure a minimum width */    max-width: 100px; /* Ensure a maximum width */    outline: none; /* Remove the default focus outline */    border: 1px solid #ccc; /* Add a border for better visibility */    padding: 5px; /* Add padding for better appearance */    /* Other styles as needed */"></td>
-            {% endfor %}
+      <td contenteditable="true" class="editable-cell" data-date={{date}} data-id="{{i.id}}" style="  width: 100px; /* Set the width of the editable cell */   min-width: 100px; /* Ensure a minimum width */    max-width: 100px; /* Ensure a maximum width */    outline: none; /* Remove the default focus outline */    border: 1px solid #ccc; /* Add a border for better visibility */    padding: 5px; /* Add padding for better appearance */    /* Other styles as needed */"></td>
+      {% endfor %}
 
     </tbody>
 
   </table>
 </div>
+<hr/>
+{%endfor%}
 
 
 </div>
