--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznForm.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznForm.html
@@ -15,7 +15,7 @@
     </thead>
     <tbody>
       {% for i in zayeat %}
-      <td contenteditable="true" class="editable-cell" data-date={{date}} data-id="{{i.id}}" style="  width: 100px; /* Set the width of the editable cell */   min-width: 100px; /* Ensure a minimum width */    max-width: 100px; /* Ensure a maximum width */    outline: none; /* Remove the default focus outline */    border: 1px solid #ccc; /* Add a border for better visibility */    padding: 5px; /* Add padding for better appearance */    /* Other styles as needed */"></td>
+      <td contenteditable="true" class="editable-cell" data-shift={{c.id}} data-date={{date}} data-id="{{i.id}}" style="  width: 100px; /* Set the width of the editable cell */   min-width: 100px; /* Ensure a minimum width */    max-width: 100px; /* Ensure a maximum width */    outline: none; /* Remove the default focus outline */    border: 1px solid #ccc; /* Add a border for better visibility */    padding: 5px; /* Add padding for better appearance */    /* Other styles as needed */"></td>
       {% endfor %}
 
     </tbody>
