--- a/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
@@ -76,51 +76,56 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card card-body app-content-body">
 
-                        <div class="card-body">
-                          <h5 class="card-title">آمار روزانه</h5>
-                          <div class="row">
-                            <div class="table-responsive"> <!-- Required for Responsive -->
-                              <table class="table table-striped table-bordered">
-                                <thead>
-                                  <tr>
-                                    <th>نام</th>
-                                    <th>سمت</th>
-                                    <th>دفتر</th>
-                                    <th>سن</th>
-                                    <th>تاریخ شروع</th>
-                                    <th>حقوق</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                {% include 'mrp/assetfailure/partialAssetFailure.html' %}
-                                </tbody>
-                               
-                              </table>
-                            </div>
-                            
-                        
-
-
-
-                          </div>
-
-                        </div>
-                        <div class="modal fade" id="modal-company">
-                         <div class="modal-dialog  modal-lg ">
-
-                           <div class="modal-content ">
-                           </div>
-                         </div>
-                        </div>
-                      </div>
                         <!-- end::app-lists -->
 
                         <!-- begin:app-detail -->
 
 
             </div>
+            <div class="col-md-9">
+              <div class="card card-body app-content-body">
+
+                  <div class="card-body">
+                    <h5 class="card-title">آمار توقفات</h5>
+                    <div class="row">
+                      <div class="table-responsive"> <!-- Required for Responsive -->
+                        <table class="table table-striped table-bordered" id="table-company">
+                          <thead class="bg-dark">
+                            <tr>
+                              <th>نام تجهیز</th>
+                              <th>نام شیفت</th>
+                              <th>مدت</th>
+                              <th>علت توقف</th>
+                              <th class="w-25"></th>
+
+                            </tr>
+                          </thead>
+                          <tbody id="tbody_company">
+                          {% include 'mrp/assetfailure/partialAssetFailure.html' %}
+                          </tbody>
+
+                        </table>
+                      </div>
+
+
+
+
+
+                    </div>
+
+                  </div>
+                  <div class="modal fade" id="modal-company">
+                   <div class="modal-dialog  modal-lg ">
+
+                     <div class="modal-content ">
+                     </div>
+                   </div>
+                  </div>
+                </div>
+
+            </div>
+
 
 
           </div>
