--- a/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailure.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailure.html
@@ -1,56 +1,17 @@
+{% for i in assetfailures %}
 <tr>
-    <td>سارا فروهر</td>
-    <td>مسئول فروش</td>
-    <td>تهران</td>
-    <td>46</td>
-    <td>1398/12/06</td>
-    <td>145,600</td>
-  </tr>
-  <tr>
-    <td>همایون محمدی</td>
-    <td>مدیر اجرایی</td>
-    <td>رشت</td>
-    <td>47</td>
-    <td>1398/03/21</td>
-    <td>356,250</td>
-  </tr>
-  <tr>
-    <td>لاله محمدی</td>
-    <td>مدیر سیستم</td>
-    <td>رشت</td>
-    <td>21</td>
-    <td>1398/02/27</td>
-    <td>103,500</td>
-  </tr>
-  <tr>
-    <td>هدا محمدی</td>
-    <td>توسعه دهنده</td>
-    <td>گیلان</td>
-    <td>30</td>
-    <td>1396/07/14</td>
-    <td>86,500</td>
-  </tr>
-  <tr>
-    <td> شادی محمدی</td>
-    <td>مدیر اجرایی</td>
-    <td>تهران</td>
-    <td>51</td>
-    <td>1398/11/13</td>
-    <td>183,000</td>
-  </tr>
-  <tr>
-    <td>  یگانه محمدی</td>
-    <td>برنامه نویس</td>
-    <td>تبریز</td>
-    <td>29</td>
-    <td>1398/06/27</td>
-    <td>183,000</td>
-  </tr>
-  <tr>
-    <td>دنیا محمدی</td>
-    <td>پشتیبانی مشتری</td>
-    <td>تهران</td>
-    <td>27</td>
-    <td>1398/01/25</td>
-    <td>112,000</td>
-  </tr>
+  <td>{{i.asset_name}}</td>
+  <td>{{i.shift}}</td>
+  <td>{{i.duration|time:"H:i"}}</td>
+  <td>{{i.failure_name}}</td>.
+  <td class="w-25">
+    <button type="button" class="btn btn-outline-light js-assetFailure-update">  <i class="ti-eye"></i></button>
+    <button type="button" class="btn btn-outline-light js-assetFailure-delete">  <i class="ti-close"></i></button>
+  </td>
+
+</tr>
+{% empty %}
+<tr>
+  <td colspan="4" class="text-center">موردی برای نمایش وجود ندارد</td>
+</tr>
+{% endfor %}
