--- a/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailureCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailureCreate.html
@@ -1,6 +1,6 @@
 <form method="post" action="{% url 'assetFailure_create'   %}" class="js-assetFailure-create-form">
     {% csrf_token %}
-    <div class="modal-header " style="background:#ccc">
+    <div class="modal-header bg-primary" >
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -16,4 +16,3 @@
       {% endif %}
     </div>
   </form>
-  
