--- a/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailureForm.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailureForm.html
@@ -8,17 +8,24 @@
     {% render_field form.failure_name  class='form-control' %}
   </div>
   <div class="mb-3">
-    <label for="timeInput" class="form-label">Time</label>
+    <label for="timeInput" class="form-label">مدت توقف</label>
     <div class="input-group clockpicker-example">
         <div class="input-group-prepend">
           <span class="input-group-text">
             <i class="fa fa-clock-o"></i>
           </span>
         </div>
-        <input type="text" class="form-control" value="09:30">
+          {% render_field form.duration  class='form-control' %}
+
       </div>
   </div>
   <div class="mb-3">
     <label>{{form.shift.label}}</label>
     {% render_field form.shift  class='form-control' %}
+  </div>
+  <div class="mb-3">
+
+
+
+    {{ form.dayOfIssue.as_hidden  }}
   </div>
