--- a/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
@@ -90,7 +90,7 @@
                     <h5 class="card-title">آمار توقفات</h5>
                     <div class="row">
                       <div class="table-responsive"> <!-- Required for Responsive -->
-                        <table class="table table-striped table-bordered" id="table-company">
+                        <table class="table table-striped table-bordered" id="company-table">
                           <thead class="bg-dark">
                             <tr>
                               <th>نام تجهیز</th>
@@ -122,6 +122,25 @@
                      </div>
                    </div>
                   </div>
+                </div>
+
+            </div>
+            <div class="col-md-3">
+              <div class="card card-body app-content-body">
+
+                  <div class="card-body">
+                    <h5 class="card-title">جزییات</h5>
+                    <div class="row">
+
+
+
+
+
+
+                    </div>
+
+                  </div>
+
                 </div>
 
             </div>
