--- a/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
@@ -62,12 +62,12 @@
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
                                         <li class="page-item">
-                                            <a class="page-link" href="#" aria-label="Previous">
+                                            <a class="page-link" href="{% url 'asset_failure_list' %}?date={{prev_date}}" aria-label="Previous">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left width-15 height-15"><polyline points="15 18 9 12 15 6"></polyline></svg>
                                             </a>
                                         </li>
                                         <li class="page-item">
-                                            <a class="page-link" href="#" aria-label="Next">
+                                            <a class="page-link" href="{% url 'asset_failure_list' %}?date={{next_date}}" aria-label="Next">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right width-15 height-15"><polyline points="9 18 15 12 9 6"></polyline></svg>
                                             </a>
                                         </li>
@@ -83,7 +83,7 @@
 
 
             </div>
-            <div class="col-md-9">
+            <div class="col-md-12">
               <div class="card card-body app-content-body">
 
                   <div class="card-body">
@@ -125,25 +125,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
-              <div class="card card-body app-content-body">
 
-                  <div class="card-body">
-                    <h5 class="card-title">جزییات</h5>
-                    <div class="row">
-
-
-
-
-
-
-                    </div>
-
-                  </div>
-
-                </div>
-
-            </div>
 
 
 
