--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanList.html
@@ -4,8 +4,8 @@
   <td>{{i.mah}}</td>
 
   <td class="w-25">
-    <button type="button" class="btn btn-outline-light js-update-assetFailure" data-url="{% url 'assetFailure_update' i.id %}" >  <i class="ti-eye"></i></button>
-    <button type="button" class="btn btn-outline-light js-assetFailure-delete">  <i class="ti-close"></i></button>
+    <button type="button" class="btn btn-outline-light js-update-assetRandeman" data-url="{% url 'assetRandeman_update' i.id %}" >  <i class="ti-eye"></i></button>
+    <button type="button" class="btn btn-outline-light js-assetRandeman-delete" data-url="{% url 'assetRandeman_delete' i.id %}">  <i class="ti-close"></i></button>
   </td>
 
 </tr>
