--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanUpdate.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanUpdate.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'assetFailure_update' form.instance.id  %}" class="js-assetFailure-update-form">
+<form method="post" action="{% url 'assetRandeman_update' form.instance.id  %}" class="js-assetRandeman-update-form">
     {% csrf_token %}
     <div class="modal-header bg-primary" >
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -10,8 +10,8 @@
      {% include 'mrp/assetrandeman/partialAssetRandemanForm.html' %}
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default">انصراف</button>
-      {% if perms.mrp.add_assetfailure %}
+      <button type="button" class="btn btn-default" data-dismiss="modal">انصراف</button>
+      {% if perms.mrp.add_assetrandeman %}
       <button type="submit" class="btn btn-primary" >ذخیره</button>
       {% endif %}
     </div>
