--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -102,6 +102,8 @@
     <ul>
       <li class="navigation-divider">اطلاعات</li>
       <li><a href="{% url 'index' %}">ورود اطلاعات روزانه</a></li>
+      <li><a href="{% url 'tolid_heatset' %}">آمار روزانه هیت ست</a></li>
+
       <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه<span class="badge badge-danger">2</span></a></li>
       <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید</a></li>
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
