--- a/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
@@ -49,7 +49,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu width-15 height-15"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                                 </a>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="جستجو ایمیل" aria-describedby="button-addon1" id="search">
+                                    <input type="text" class="form-control" placeholder="جستجو ایمیل" aria-describedby="button-addon1" id="search" value="{{greg_today}}">
                                     <div class="input-group-append">
                                         <button class="btn btn-outline-light" type="button" id="button-addon1">
                                             <i class="ti-search"></i>
