--- a/tiny_mrp/mrp/templates/mrp/failures/failureList.html
+++ b/tiny_mrp/mrp/templates/mrp/failures/failureList.html
@@ -9,27 +9,43 @@
             <div class="card-body">
                 <h6 class="card-title">{{title}}</h6>
                 <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
-                    <table class="table table-striped table-bordered">
+                    <table class="table table-striped table-bordered" id="company-table">
                         <thead>
                         <tr class="bg-info">
                         <th>کد</th>
                         <th>اسم</th>
+                        <th>عملیات</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tbody_company">
                           {% include 'mrp/failures/partialFailureList.html' %}
 
                           </tbody>
                     </table>
-                    <p><button type="button" class="btn btn-info btn-square">موفقیت</button></p>
+                    <p><button type="button" class="btn btn-info btn-square js-create-failure" data-url="{% url 'failure_create' %}">جدید</button></p>
                 </div>
 
             </div>
+        </div>
+        <div class="modal fade" id="modal-company">
+         <div class="modal-dialog  modal-lg ">
+
+           <div class="modal-content ">
+           </div>
+         </div>
         </div>
 
 
 
     </div>
 </div>
+
+{% endblock %}
+{% load static %}
+
+{% block javascript %}
+
+
+ <script src="{% static 'project/failure.js' %}"></script>
 
 {% endblock %}
