--- a/tiny_mrp/mrp/templates/mrp/failures/partialFailureUpdate.html
+++ b/tiny_mrp/mrp/templates/mrp/failures/partialFailureUpdate.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'failure_create'   %}" class="js-failure-create-form" autocomplete="off">
+<form method="post" action="{% url 'failure_update' form.instance.id  %}" class="js-failure-update-form" autocomplete="off">
     {% csrf_token %}
     <div class="modal-header bg-primary" >
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -10,8 +10,8 @@
      {% include 'mrp/failures/partialFailureForm.html' %}
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default">انصراف</button>
-      {% if perms.mrp.add_assetfailure %}
+      <button type="button" class="btn btn-default" data-dismiss="modal">انصراف</button>
+      {% if perms.mrp.add_failure %}
       <button type="submit" class="btn btn-primary" >ذخیره</button>
       {% endif %}
     </div>
