--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -108,7 +108,9 @@
       <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید</a></li>
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
-      <li><a href="{% url 'calendar_asset_failure' %}">ثبت آمار توقف روزانه</a></li>
+      <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف 
+      <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف
+      </a></li>
       <li><a href="{% url 'monthly_detaild_failured_report' %}">مشاهده توقفات ماهانه</a></li>
 
 
