--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanCreate.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'assetRandeman_create'   %}" class="js-assetRandeman-create-form">
+<form method="post" action="{% url 'assetRandeman_create'   %}" class="js-assetRandeman-create-form" autocomplete="off">
     {% csrf_token %}
     <div class="modal-header bg-primary" >
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
