--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanUpdate.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanUpdate.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'assetRandeman_update' form.instance.id  %}" class="js-assetRandeman-update-form">
+<form method="post" action="{% url 'assetRandeman_update' form.instance.id  %}" class="js-assetRandeman-update-form" autocomplete="off">
     {% csrf_token %}
     <div class="modal-header bg-primary" >
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
