--- a/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
@@ -97,6 +97,7 @@
                                       <th>وزن داف</th>
                                       <th>وزن باقی</th>
                                       <th>وزن خالص</th>
+                                      <th>سرعت</th>
 
                                     </tr>
                                   </thead>
@@ -114,6 +115,8 @@
                                       <td contenteditable="true" class="editable-cell btc vazne_baghi selectable1">0</td>
 
                                       <td contenteditable="true" data-formula="" class='production'></td>
+                                      <td contenteditable="true" data-formula="" class='speed'>{{c.speed}}</td>
+
 
                                     </tr>
                                     {% endfor %}
