--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -108,7 +108,7 @@
       <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید</a></li>
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
-      <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف 
+      <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف
       <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف
       </a></li>
       <li><a href="{% url 'monthly_detaild_failured_report' %}">مشاهده توقفات ماهانه</a></li>
@@ -141,6 +141,18 @@
       <li>
         <a href="{% url 'list_failures' %}">
           <span>نوع توقفات</span>
+
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'list_nezafat_padash' %}">
+          <span>پاداش نظافت</span>
+
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'list_tolid_padash' %}">
+          <span>پاداش تولید</span>
 
         </a>
       </li>
