--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialTolidRankingList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialTolidRankingList.html
@@ -1,3 +1,4 @@
+<form method="post" action="{% url 'assetRandeman_tolid_ranking_create'   %}" class="js-assetRandeman-ranking-form" autocomplete="off">
 
 <div class="modal-header bg-primary" >
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -10,7 +11,7 @@
     <h2>{{title}} {{mah}} ماه {{sal}}</h2>
     <ul class="list-group sortable-list" id="sortable">
       {% for i in shifts %}
-      <li class="list-group-item" data-position={{i.rank}}>{{i.shift.name}} <span class="move-up" onclick="moveItemUp(this)">↑</span> <span class="move-down" onclick="moveItemDown(this)">↓</span></li>
+      <li class="list-group-item" data-assetrandeman={{i.asset_randeman_list.id}} data-id={{i.id}} data-position={{i.rank}}>{{i.shift.name}} <span class="move-up" onclick="moveItemUp(this)">↑</span> <span class="move-down" onclick="moveItemDown(this)">↓</span></li>
       {% endfor %}
 
     </ul>
@@ -22,6 +23,7 @@
   <button type="submit" class="btn btn-primary" >ذخیره</button>
   {% endif %}
 </div>
+</form>
 <style>
     .sortable-list {
       list-style-type: none;
@@ -42,11 +44,28 @@
 <script type="text/javascript">
   function moveItemUp(element) {
       var li = $(element).closest('li');
+      var position=parseInt(li.attr("data-position"));
+      if(position >1){
+      position=position-1;
+      prev_pos=parseInt(li.prev().attr("data-position"));
+      prev_pos=prev_pos+1;
+      li.attr("data-position",position);
+      li.prev().attr("data-position",prev_pos);
+    }
       li.insertBefore(li.prev());
     }
 
     function moveItemDown(element) {
       var li = $(element).closest('li');
+
+      var position=parseInt(li.attr("data-position"));
+      if(position <3){
+      position=position+1;
+      prev_pos=parseInt(li.next().attr("data-position"));
+      prev_pos=prev_pos-1;
+      li.attr("data-position",position);
+      li.next().attr("data-position",prev_pos);
+    }
       li.insertAfter(li.next());
     }
 
