--- a/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
@@ -121,7 +121,7 @@
                             </button>
                                       </td>
                                       <td contenteditable="true" data-formula="" class='production'></td>
-                                      <td contenteditable="true" data-formula="" class='speed'>{{c.speed}}</td>
+                                      <td contenteditable="true"  class='speed'>{{c.speed}}</td>
 
 
 
