--- a/tiny_mrp/mrp/templates/mrp/tolid/partialHeatsetList.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/partialHeatsetList.html
@@ -42,7 +42,7 @@
 </button>
         </td>
           <td contenteditable="true" data-formula="" class='production'>{{c.amar.production_value}}</td>
-          <td contenteditable="true" data-formula="" class='speed'>{{c.amar.speed}}</td>
+          <td contenteditable="true"  class='speed'>{{c.amar.speed}}</td>
 
 
         </tr>
